fix text clipping visual specs circle

--- a/css/styles.css
+++ b/css/styles.css
@@ -614,11 +614,11 @@ h3.location-modal-name {
 .power-text-value,
 .engine-text-value,
 .weight-text-value {
-    font-size: 4rem;
+    font-size: 3.6rem;
 }
 
 .box .percentage .number h2 .unit {
-    font-size: 2rem;
+    font-size: 1.8rem;
     color: var(--dark-200);
 }
 
